--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,8 @@ jobs:
           command: |
             cd frontend
             npm install
+            npm audit fix --force
+            npm update
             npm run build
       - save_cache:
           paths: [frontend/node_modules]
