--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,21 +69,39 @@ jobs:
           paths: [backend/node_modules]
           key: backend-build
 
-  # test-frontend:
-  #   docker:
-  #     # Docker image here
-  #   steps:
-  #     # Checkout code from git
-  #     # Restore from cache
-  #     # Your job code here
+  test-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys:[frontend-build]
+      - run:
+          name: Run front-end test
+          command: |
+            cd frontend
+            npm install
+            npm run test
+      # Restore from cache
+      # Your job code here
                 
-  # test-backend:
-  #   docker:
-  #     # Docker image here
-  #   steps:
-  #     # Checkout code from git
-  #     # Restore from cache
-  #     # Your job code here
+  test-backend:
+    docker:
+      - image: cimg/node:18.4.0
+      # Docker image here
+    steps:
+      - checkout
+      - restore_cache:
+          keys:[backend-build]
+      - run:
+          name: Run back-end test
+          command: |
+            cd backend
+            npm install
+            npm run test
+      # Checkout code from git
+      # Restore from cache
+      # Your job code here
             
   # scan-frontend:
   #   docker:
@@ -272,3 +290,7 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
