--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [backend1-build]
+          keys: [backendd-build]
       - run:
           name: Back-end build
           command: |
@@ -67,15 +67,7 @@ jobs:
              npm run build
       - save_cache:
           paths: [backend/node_modules]
-          key: backend1-build
-
-  # test-frontend:
-  #   docker:
-  #     - image: circleci/node:13.8.0
-  #   steps:
-  #     - checkout
-  #     - restore_cache:
-  #         keys: []
+          key: backendd-build
 
   test-frontend:
     docker:
@@ -85,28 +77,63 @@ jobs:
       - restore_cache:
           keys: [frontend-build]
       - run:
-          name: Run front-end test
+          name: Run frontend test
           command: |
             cd frontend
             npm install
+            npm audit fix --force
+            npm update
             npm run test
-      # Restore from cache
-      # Your job code here
-                
+
   test-backend:
-    docker:
+    docker: 
       - image: circleci/node:13.8.0
-      # Docker image here
     steps:
       - checkout
       - restore_cache:
-          keys: [backend1-build]
-      - run:
-          name: Run back-end test
+          keys: [backendd-build]
+      - run: 
+          name: Run backend test
           command: |
             cd backend
             npm install
             npm run test
+
+
+
+
+
+
+  # test-frontend:
+  #   docker:
+  #     - image: circleci/node:13.8.0
+  #   steps:
+  #     - checkout
+  #     - restore_cache:
+  #         keys: [frontend-build]
+  #     - run:
+  #         name: Run front-end test
+  #         command: |
+  #           cd frontend
+  #           npm install
+  #           npm run test
+  #     # Restore from cache
+  #     # Your job code here
+                
+  # test-backend:
+  #   docker:
+  #     - image: circleci/node:13.8.0
+  #     # Docker image here
+  #   steps:
+  #     - checkout
+  #     - restore_cache:
+  #         keys: [backend1-build]
+  #     - run:
+  #         name: Run back-end test
+  #         command: |
+  #           cd backend
+  #           npm install
+  #           npm run test
       # Checkout code from git
       # Restore from cache
       # Your job code here
@@ -299,6 +326,8 @@ workflows:
       - build-frontend
       - build-backend
       - test-frontend:
-          requires: [build-frontend]
+          requires: 
+            - build-frontend
       - test-backend:
-          requires: [build-backend]
+          requires: 
+            - build-backend
