--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,7 @@
 version: 2.1
+orbs: 
+  slack: circleci/slack@4.10.1
+
 
 commands:
   # destroy-environment:
@@ -48,9 +51,17 @@ jobs:
             npm audit fix --force
             npm update
             npm run build
+            exit 1
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
+      - slack/notify:
+          event: fail
+          mentions: '@EngineeringTeam'
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1      
 
   build-backend:
     docker:
@@ -68,6 +79,13 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backendd-build
+      - slack/notify:
+          event: fail
+          mentions: '@EngineeringTeam'
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1
 
   test-frontend:
     docker:
@@ -83,6 +101,7 @@ jobs:
             npm install
             npm update
             npm run test
+
 
   test-backend:
     docker: 
