--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -341,4 +341,4 @@ workflows:
             - test-frontend 
             - test-backend 
             - scan-frontend 
-            - scan-backend]
+            - scan-backend
