--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,9 @@ commands:
           name: Destroy environments
           when: on_fail
           command: |
-            # Your code here
-            exit 1
+            aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
+            aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
+          
 
   # revert-migrations:
   #   description: Revert the last migration if successfully run in the current workflow.
@@ -177,15 +178,14 @@ jobs:
           name: Add back-end ip to ansible inventory
           command: |
             aws ec2 describe-instances \        
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \      
-              --filters "Name=tag:project,Values=udapeople" \       
-              --output text >> .circleci/ansible/inventory.txt \
-            exit 1
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \          
+              --output text >> .circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      # Here's where you will add some code to rollback on failure      
+      # Here's where you will add some code to rollback on failure
+      - destroy_environment      
 
   # configure-infrastructure:
   #   docker:
