--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -185,7 +185,7 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      # Here's where you will add some code to rollback on failure
+      # Here's where you will add some code to rollback on failure fh
       - destroy-environment      
 
   # configure-infrastructure:
