--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -342,13 +342,13 @@ workflows:
       - scan-frontend:
           requires:
             - build-frontend
-      - deploy-infrastructure:
-          requires:
-            - test-frontend 
-            - test-backend 
-            - scan-frontend 
-            - scan-backend
+      # - deploy-infrastructure:
+      #     requires:
+      #       - test-frontend 
+      #       - test-backend 
+      #       - scan-frontend 
+      #       - scan-backend
 
-      - configure-infrastructure:
-          requires:
-            - deploy-infrastructure
+      - configure-infrastructure
+          # requires:
+          #   - deploy-infrastructure
