--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ commands:
           command: |
             aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
             aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
-            aws s3 rm "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive
+            # aws s3 rm "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive
           
 
   revert-migrations:
@@ -245,8 +245,8 @@ jobs:
             cd backend
             npm install
             npm i 
-            npm run build
             npm run migrations > migrations_dump.txt
+            cat ./migrations_dump.txt
       - run:
           name: Send migration results to memstash.io OR kvdb.io
           command: |
