--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,17 +10,13 @@ commands:
       # Add parameter here   
     steps:
       - run:
-          name: Workflow ID will be destroyed
-          when: on_fail
-          command: echo "WorkflowID=${CIRCLE_WORKFLOW_ID:0:7}"
-      - run:
           name: Destroy environments
           when: on_fail
           command: |
             aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
             aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
-            # aws s3 rm "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive
-          
+
+ # aws s3 rm "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive       
 
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
@@ -246,6 +242,7 @@ jobs:
             npm install
             npm audit fix --force
             npm update
+            npm audit fix
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to memstash.io OR kvdb.io
