--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,18 +5,14 @@ orbs:
 
 commands:
   destroy-environment:
-    description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     steps:
       - run:
-          name: Destroy environments
+          name: destroy environments
           when: on_fail
           command: |
-            # Delete files from S3 bucket
-            aws s3 rm s3://udapeople-${CIRCLE_WORKFLOW_ID}/ --recursive
-            # Delete frontend stack
-            aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID}
-            # Delete backend stack
-            aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID}
+            aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
+            aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
+            aws s3 rm "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive     
 
   # destroy-environment:
   #   steps:
@@ -33,10 +29,7 @@ commands:
   #           aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
   #           aws s3 rm "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive       
 
-  revert-migrations:
-    description: Revert the last migration if successfully run in the current workflow.
-    parameters:
-      # Add parameter here     
+  revert-migrations:   
     steps:
       - run:
           name: Revert migrations
@@ -90,6 +83,8 @@ jobs:
           command: |
              cd backend
              npm install
+             npm audit fix --force
+             npm update
              npm run build
       - save_cache:
           paths: [backend/node_modules]
@@ -267,7 +262,7 @@ jobs:
               curl -H "Content-Type: text/plain" -H "token: 7933fe63-4687-4fa1-8426-aa25aa1730ec" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}
             fi
       # Here's where you will add some code to rollback on failure
-      - destroy-environment      
+      - destroy-environment    
 
   deploy-frontend:
     docker:
