--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -225,6 +225,7 @@ jobs:
           command: |
             # Your code here
             apk add --update ansible
+      - create-dotenv-file
       - run:
           name: Configure server
           command: |
@@ -242,12 +243,12 @@ jobs:
       - restore_cache:
           keys: [backendded-build]      
       - attach_workspace:
-          at: ~/   
+          at: ~/
+      - create-dotenv-file   
       - run:
           name: Run migrations
           command: |
             cd backend
-            npm install
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to memstash.io OR kvdb.io
