--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -267,6 +267,8 @@ jobs:
           name: Run migrations
           command: |
             cd backend
+            npm i
+            npm run build
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to memstash.io
