--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -414,6 +414,8 @@ jobs:
               exit 1
             fi
       # Here's where you will add some code to rollback on failure  
+      - destroy-environment 
+      - revert-migrations  
 
 #   cloudfront-update:
 #     docker:
