--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ commands:
           when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS = $(curl --insecure "https://https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}")
+            SUCCESS = $(curl --insecure "https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}")
             if(( $SUCCESS==1 )); 
             then
               cd ~/project/backend
@@ -491,3 +491,8 @@ workflows:
       - deploy-backend:
           requires:
               - run-migrations
+
+      - smoke-test:
+          requires: 
+              - deploy-backend 
+              - deploy-frontend
