--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,13 +54,14 @@ commands:
           when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS = $(curl --insecure https://kvdb.io/9ki2ESz1xv4oMpXk4MkFda/migration_${CIRCLE_WORKFLOW_ID:0:7})
-            if(( $SUCCESS == 1 )); 
-            then
-              cd backend
-              npm install
-              npm run migrations:revert
-            fi
+            # SUCCESS = $(curl --insecure https://kvdb.io/9ki2ESz1xv4oMpXk4MkFda/migration_${CIRCLE_WORKFLOW_ID:0:7})
+            # if(( $SUCCESS == 1 )); 
+            # then
+            #   cd backend
+            #   npm install
+            #   npm run migrations:revert
+            # fi
+            echo "done"
             
 jobs:
   build-frontend:
