--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -512,38 +512,38 @@ workflows:
       - scan-frontend:
           requires:
             - build-frontend
-      - deploy-infrastructure:
-          requires:
-            - test-frontend 
-            - test-backend 
-            - scan-frontend 
-            - scan-backend
+      # - deploy-infrastructure:
+      #     requires:
+      #       - test-frontend 
+      #       - test-backend 
+      #       - scan-frontend 
+      #       - scan-backend
 
-      - configure-infrastructure:
-          requires:
-            - deploy-infrastructure
+      # - configure-infrastructure:
+      #     requires:
+      #       - deploy-infrastructure
       
-      - run-migrations:
-          requires:
-              - configure-infrastructure
+      # - run-migrations:
+      #     requires:
+      #         - configure-infrastructure
 
-      - deploy-frontend:
-          requires:
-              - run-migrations
+      # - deploy-frontend:
+      #     requires:
+      #         - run-migrations
 
-      - deploy-backend:
-          requires:
-              - run-migrations
+      # - deploy-backend:
+      #     requires:
+      #         - run-migrations
 
-      - smoke-test:
-          requires: 
-              - deploy-backend 
-              - deploy-frontend
+      # - smoke-test:
+      #     requires: 
+      #         - deploy-backend 
+      #         - deploy-frontend
 
-      - cloudfront-update:
-          requires:
-              - smoke-test
+      # - cloudfront-update:
+      #     requires:
+      #         - smoke-test
 
-      - cleanup:
-          requires:
-              - cloudfront-update
+      # - cleanup:
+      #     requires:
+      #         - cloudfront-update
