--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -443,9 +443,9 @@ jobs:
           command: |
             your code here
             BACKEND_IP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
+            API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
-            if curl -s $API_URL/api/status | grep "ok"
+            if curl -s "${API_URL}/api/status" | grep "ok"
             then 
               exit 0
             else
@@ -460,7 +460,7 @@ jobs:
             echo ${URL}
             if curl -s ${URL} | grep "Welcome"
             then 
-              exit 1 
+              exit 0 
             else
               exit 1
             fi
